<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bismara Paciente</string>
    <string name="action_settings">Settings</string>
    <string name="en_login_error_message">Error. Please check your credentials</string>
    <string name="en_login_continue_button">Sign in</string>
    <string name="en_hint_username">Username</string>
    <string name="en_hint_password">Password</string>
    <string name="en_hint_name">First name</string>
    <string name="en_hint_last_name">Last name</string>
    <string name="en_hint_phone">Phone number</string>
    <string name="en_hint_mail">Mail</string>
    <string name="en_hint_repeat_password">Repeat password</string>
    <string name="en_register_button">Register now!</string>
    <string name="en_firstname_empty">Please enter your first name</string>
    <string name="en_lastname_empty">Please enter your last name</string>
    <string name="en_username_empty">Please enter a username</string>
    <string name="en_password_empty">Please enter a password</string>
    <string name="en_repeat_password_empty">Please repeat your password</string>
    <string name="en_mail_empty">Please enter an email address</string>
    <string name="en_passwords_dont_match">Password don\'t match</string>
    <string name="es_action_settings">Configuración</string>
    <string name="es_login_error_message">Su usuario o contraseña son incorrectos</string>
    <string name="es_login_continue_button">Iniciar Sesión</string>
    <string name="es_hint_username">Usuario</string>
    <string name="es_hint_password">Contraseña</string>
    <string name="es_hint_name">Nombre</string>
    <string name="es_hint_last_name">Apellido</string>
    <string name="es_hint_phone">Teléfono</string>
    <string name="es_hint_mail">Correo electrónico</string>
    <string name="es_hint_repeat_password">Repita su contraseña</string>
    <string name="es_register_button">Registrar</string>
    <string name="es_firstname_empty">Por favor ingrese su nombre</string>
    <string name="es_lastname_empty">Por faovr ingrese su apellido</string>
    <string name="es_username_empty">Por favor ingrese un nombre de usuario</string>
    <string name="es_password_empty">Por favor ingrese su contraseña</string>
    <string name="es_repeat_password_empty">Por favor repita su contraseña</string>
    <string name="es_mail_empty">Por favor ingrese un correo electrónico</string>
    <string name="es_password_dont_match">Las contraseñas no coinciden</string>
    <string name="en_pass_format">Password has to contains from 8 to 20 characters and at least one number</string>
    <string name="es_pass_format">La contraseña debe tener entre 8 y 20 caracteres y contener al menos un número</string>
    <string name="en_register_suggestion">Not a Bismara user yet? Sign up!</string>
    <string name="es_register_suggestion">¿No eres usuario todavia? ¡Regístrate!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="en_hint_license">License number</string>
    <string name="es_hint_license">Número de matrícula </string>
    <string name="title_activity_confirmation_on_hold">ConfirmationOnHoldActivity</string>
    <string name="en_logging_in">Verifying your credentials</string>
    <string name="es_logging_in">Iniciando sesión</string>
    <string name="en_hint_address">Address</string>
    <string name="es_hint_address">Dirección</string>
    <string name="en_already_have_account">Already have an account? Log in to Bismara!</string>
    <string name="es_already_have_account">¿Ya tienes una cuenta? ¡Inicia sesión en Bismara!</string>
    <string name="en_logout">Log Out</string>
    <string name="es_logout">Cerrar sesión</string>
    <string name="en_start_registration_text">Start your registration and create your Bismara medical account to start enjoying all the features Bismara has for you</string>
    <string name="es_start_registration_text">Comienza con el registro y crea tu cuenta médica Bismara para comenzar a disfrutar de todo lo que Bismara tiene para ti</string>
    <string name="en_register_now">Register now to Bismara!</string>
    <string name="es_register_now">Regístrate ahora a Bismara!</string>
    <string name="en_enter_mail_suggestion">Enter your mail below to get started</string>
    <string name="es_enter_mail_suggestion">Ingresa tu correo electrónico para comenzar</string>
    <string name="en_start_registration_btn">Start registration now</string>
    <string name="es_start_registration_btn">Registrarse</string>
    <string name="en_credentials_empty">Please enter your credentials</string>
    <string name="es_credentials_empty">Por favor ingrese usuario y contraseña</string>
    <string name="doctor_name">Nombre: </string>
    <string name="doctor_license">Matricula: </string>
</resources>
