<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/es_register_now"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/es_start_registration_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/tvEnter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvStart"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/es_enter_mail_suggestion"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvEnter"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_mail"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/es_hint_mail"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="5dp" >
    </EditText>

    <TextView
        android:id="@+id/tvHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/es_already_have_account"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/btnStartRegistration"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/tvHaveAccount"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/tvTitle"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/btnstyle"
        android:text="@string/es_start_registration_btn"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</RelativeLayout>