<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_enter_name"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="Primeros pasos..."
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="¡Vamos a comenzar con tu registro! Por favor ingresa tus datos."
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etName"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/es_hint_last_name"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="5dp" >
    </EditText>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/etLastName"
        android:layout_centerVertical="true"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/es_hint_phone"
        android:inputType="phone"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="5dp" >
    </EditText>

    <Button
        android:id="@+id/btnNextStep"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:background="@android:color/transparent"
        android:text="Siguiente >"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/tvStart"
        android:layout_below="@+id/tvStart"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/es_hint_name"
        android:inputType="textCapWords"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="5dp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/tvStart"
        android:layout_below="@+id/etPhone"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/rounded_edittext"
        android:drawableStart="@drawable/ic_user"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/es_hint_address"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:paddingEnd="3dp"
        android:paddingStart="3dp"
        android:paddingTop="5dp" />

</RelativeLayout>